[package]
name = "printenv2"
version = "0.0.3"
edition = "2021"
authors = [
    "Xinkai Chen <xinkai.chen@qq.com>",
]
description = "A printenv rewrite in Rust"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/Xinkai/printenv2/"
license = "MIT"
keywords = ["printenv", "coreutils"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { version = "2" }
clap = { version = "3.2.16", features = ["derive"] }

[target.'cfg(target_family = "windows")'.dependencies]
windows = { version = "0.38", features = [
    "alloc",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
bindgen = { version = "0.60.1" }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
