[package]
name = "printenv2"
version = "0.1.1"
edition = "2021"
authors = [
    "Xinkai Chen <xinkai.chen@qq.com>",
]
description = "A printenv rewrite in Rust"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/Xinkai/printenv2/"
license = "MIT"
keywords = ["printenv", "coreutils"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { version = "2" }
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0.160" }
serde_json = { version = "1.0.95" }

[target.'cfg(target_family = "windows")'.dependencies]
windows = { version = "0.42.0", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
bindgen = { version = "0.63.0" }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
codegen-units = 1
